--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="space col-12"></div>
         <section class="text-center col-12">
           <hr>
-          <BUtton class="btn btn-primary btn-xl">find out more</BUtton>
+          <a href="https://us12.list-manage.com/contact-form?u=9f46cbbd9a8a12621242fc66e&form_id=e5b8046ec32c84b8c97a795457268f53">
+            <BUtton class="btn btn-primary btn-xl">find out more</BUtton>
+          </a>
         </section>  
       </div>
     </div>
